# indii-music-babyrobots

./: .env.example  .env.staging  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  AGENT_TASKS.md  AI_AGENT_IMPLEMENTATION_PLAN.md  PHASE_2_CORE_INTELLIGENCE_COMPREHENSIVE_TODO.md  PHASE_3_SOCIAL_DISTRIBUTION_COMPREHENSIVE_TODO.md  PROJECT_SETUP.md  PROJECT_STATUS.md  PROJECT_TODO.md  TODO.md  TODO_REPOSITORY_ANALYSIS.md  TREERINGS_IMPLEMENTATION_PLAN.md  comprehensive-todo-list.md  docker-compose.staging.yml  docker-compose.yml  jest.config.js  jest.logger.config.js  jest.memory.setup.js  jest.middleware.config.js  jest.setup.js  jest.testdb.config.js  memory_hub.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  tailwind.config.js  test_result.md  tsconfig.json
.emergent/: summary.txt
.logs/: TreeRings_error.md
__mocks__/: better-sqlite3.js  fs.js
__tests__/: jest.memory.config.js
backend/: main.py
chroma_db/: chroma.sqlite3
docs/: AGENT_MODE_REPORT.json  AGENT_MODE_REPORT.md  AGENT_SYSTEM_MONITORING.md  AGENT_TASKS.json  AGENT_TASKS.md  API_FIXES_SUMMARY.json  API_FIXES_SUMMARY.md  API_Key_Issue_Report.json  API_Key_Issue_Report.md  CURRENT_STATUS.md  DEBUG_REPORT_MAIN_JS.md  DEPENDENCY_GRAPH.json  DEPENDENCY_GRAPH.md  DESIGN_CONVERSATION.md  DESIGN_SUMMARY.md  DEV_SERVER_NOTES.json  DEV_SERVER_NOTES.md  DOCUMENTATION_PLAN.json  DOCUMENTATION_PLAN.md  DOCUMENTATION_ROADMAP.md  Dockerfile  FASTAPI_SERVICE_DEBUG.md  FINAL_TODO_WRAPUP.md  FRONTEND_INTERACTION_POINTS.json  FRONTEND_INTERACTION_POINTS.md  GEMINI_MONITORING_SYSTEM.md  (+65 more)
(+342 files in other folders)
