[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indii-music-babyrobots"
version = "0.1.0"
authors = [
  { name = "narrowchannel", email = "" },
]
description = "Indii Music BabyRobots Project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["src"]
