[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indii-music-babyrobots"
version = "0.1.0"
description = "Indii Music BabyRobots FastAPI Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "mutagen>=1.46.0",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/indii_music_babyrobots"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/**/*.json",
    "src/**/*.yaml",
]
